--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,3 +98,11 @@ ul li a:hover::after {
   border: 0;
   outline: none;
 }
+
+.left-column h1 {
+  font-size: 100px;
+}
+
+.left-column h3 {
+  font-size: 100px;
+}
