--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,7 +40,8 @@ ul li a {
 
 ul li a::after {
   content: '';
-  width: 100%;
+  /* width: 100%; */
+  width: 0;
   height: 10px;
   background: #f14a60;
   position: absolute;
@@ -104,5 +105,59 @@ ul li a:hover::after {
 }
 
 .left-column h3 {
-  font-size: 100px;
+  font-size: 35px;
+}
+
+span {
+  color: #f14a60;
+}
+
+.left-column p {
+  font-size: 14px;
+  color: #999;
+  margin: 50px 0;
+}
+
+.btn button {
+  padding: 7px 30px;
+  margin-right: 15px;
+  outline: none;
+  border: 1px solid #fb7381;
+  border-radius: 20px;
+  cursor: pointer;
+  color: #fb7381;
+  background: transparent;
+}
+
+.btn .primary-btn {
+  background: linear-gradient(#fb7381, #f14a60);
+  box-shadow: 0 2px 15px rgba(248, 38, 103, 0.26);
+  color: #fff;
+}
+
+.btn {
+  margin-bottom: 50px;
+}
+
+.social-icons {
+  width: 200px;
+  text-align: center;
+  opacity: .4;
+  position: relative;
+  margin-left: 160px;
+}
+
+.social-icons img {
+  height: 20px;
+  margin: 0 14px;
+}
+
+.social-icons::after {
+  content: '';
+  width: 150px;
+  height: 1px;
+  background: #000;
+  position: absolute;
+  left: -160px;
+  top: 10px;
 }
